project with final changes

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -24,7 +24,14 @@
       href="https://cdn.jsdelivr.net/npm/remixicon@2.2.0/fonts/remixicon.css"
       rel="stylesheet"
     />
-
+    <script
+      type="text/javascript"
+      defer
+      src="https://donorbox.org/install-popup-button.js"
+    ></script>
+    <script>
+      window.DonorBox = { widgetLinkClassName: "custom-dbox-popup" };
+    </script>
     <title>NGO portal</title>
   </head>
   <body>
